<resources>
    <string name="app_name">About-You</string>

    <!--Engineers-->
    <string name="engineers_screen_title">Engineers at Glucode</string>
    <string name="engineers_menu_title">Filter by</string>
    <string name="engineers_menu_years">Years</string>
    <string name="engineers_menu_coffees">Coffees</string>
    <string name="engineers_menu_bugs">Bugs</string>

    <!--About-->
    <string name="about_screen_title">About</string>
    <string name="engineer_years">Years</string>
    <string name="engineer_coffees">Coffees</string>
    <string name="engineer_bugs">Bugs</string>
    <string name="hint_years">6</string>
    <string name="hint_coffees">800</string>
    <string name="hint_bugs">1000</string>
</resources>