<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="124dp"
            android:layout_marginStart="@dimen/margin_normal"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="100"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/engineerName"
            style="@style/Material.Body1.Medium.Dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/engineerRole"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/constraintLayout"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Developer name" />

        <TextView
            android:id="@+id/engineerRole"
            style="@style/Material.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/engineerName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/engineerName"
            tools:text="Developer role" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@drawable/profile_background"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@id/engineerName">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/engineer_years"
                    android:textColor="@color/text_grey" />

                <TextView
                    android:id="@+id/engineerNumOfYears"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_extra_tiny"
                    android:layout_marginBottom="@dimen/margin_tiny"
                    android:hint="@string/hint_years"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/engineer_coffees"
                    android:textColor="@color/text_grey" />

                <TextView
                    android:id="@+id/engineerNumOfCoffees"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_extra_tiny"
                    android:layout_marginBottom="@dimen/margin_tiny"
                    android:hint="@string/hint_coffees"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/engineer_bugs"
                    android:textColor="@color/text_grey" />

                <TextView
                    android:id="@+id/engineerNumOfBugs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_extra_tiny"
                    android:layout_marginBottom="@dimen/margin_tiny"
                    android:hint="@string/hint_bugs"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>